made changes to application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -20,6 +20,13 @@
       "es2018",
       "dom"
     ],
+    "paths": {
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@configs/*": ["app/configs/*"],
+      "@env/*": ["environments/*"],
+      "@assets/*": ["assets/*"],
+    },
     "strictNullChecks":false
   },
   "angularCompilerOptions": {
